@@ -88,6 +88,7 @@ WHAT IS NEW?
       NPCs, menus) and is safe to use: it no longer returns false positives...
       until you create and delete at least a million slices. Good enough. [Ralph]
     * "hero uses level mp" [James]
+    * "delete map state" takes customid arg, like other mapstate commands [Ralph]
 
   *** Changes
     * Removed support for optional prefixes on .ini config settings (e.g.
